src/objects/MICO_Test__c.object
<CustomObject>
    <description>Business Description: This object is used to record the tests which have been executed. 

Each test is a copy of a &quot;Test Template&quot; which has been set up by a Test Manager or other Test Script writer. 

Tests are created by the system automatically when a user is added to the Testers Related list on a Test Template.

Used In: Mission Control App</description>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>This field will capture the date and time when Test Execution gets approved: Created on 30/07/2014 by Himanshu Babaria : MICO</description>
        <inlineHelpText>Date this has been approved by SME</inlineHelpText>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field will capture the status of approval for Test Execution records. It will be auto-populated through the workflow process: Created on 30/07/2014 by Himanshu Babaria :MICO</description>
        <inlineHelpText>The status of the approval. This is auto populated as the Test Execution goes through the process.</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will capture the name of the approver for approving Test Executions: Created on 30/07/2014 by Himanshu Babaria :MICO</description>
        <inlineHelpText>Your approval indicates that the test was properly documented, the documented test results support the overall pass or fail status of the test case or script and the test cases/scripts are accurate, complete and meet the requirements of LQP-302-18</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which user ran this test</inlineHelpText>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Template__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The description of this text script</inlineHelpText>
        <label>Test Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Enter the environment that this test was performed in</description>
        <inlineHelpText>Enter the environment that this test was performed in</inlineHelpText>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <formula>Template__r.Introduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the overall aim of this test</inlineHelpText>
        <label>Introduction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Test_Comments__c</fullName>
        <inlineHelpText>Overall test comments. 

You should note what happened in the test, e.g. for promotion creation &quot;Succesfully created promotion&quot;.

This can be copy and pasted from the excel file.</inlineHelpText>
        <label>Overall Test Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pass_Percentage__c</fullName>
        <formula>Steps_Passed__c / Total_Steps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of all steps that are passed or passed with minor issues</inlineHelpText>
        <label>Pass Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProjectNew__c</fullName>
        <formula>User_Story__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MICO_Project__c</referenceTo>
        <relationshipLabel>Test Executions</relationshipLabel>
        <relationshipName>MICO_Test_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recall_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SprintNew__c</fullName>
        <formula>User_Story__r.Allocated_Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>MICO_Sprint__c</referenceTo>
        <relationshipLabel>Test Executions</relationshipLabel>
        <relationshipName>MICO_Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The stage in the test lifecycle. A test case can be Status=Complete and fOutcome=&quot;Failed&quot; if a bug has been raised. Once the bug has been fixed the test case may be set to &quot;Awaiting Retest&quot; by the Test Lead</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Retest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_Completed__c</fullName>
        <inlineHelpText>Sums the number of steps who&apos;s outcome is not N/A</inlineHelpText>
        <label>Steps Completed</label>
        <summaryFilterItems>
            <field>MICO_Test_Steps__c.Outcome__c</field>
            <operation>notEqual</operation>
            <value>TBC</value>
        </summaryFilterItems>
        <summaryForeignKey>MICO_Test_Steps__c.Test__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Steps_Passed__c</fullName>
        <inlineHelpText>The total number of steps passed or  passed with minor issues</inlineHelpText>
        <label>Steps Passed</label>
        <summaryFilterItems>
            <field>MICO_Test_Steps__c.Outcome__c</field>
            <operation>equals</operation>
            <value>Pass, Passed with issues</value>
        </summaryFilterItems>
        <summaryForeignKey>MICO_Test_Steps__c.Test__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Executions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The script being executed</inlineHelpText>
        <label>Template</label>
        <referenceTo>MICO_Test_Templates__c</referenceTo>
        <relationshipName>MICO_Test</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Completion__c</fullName>
        <formula>Steps_Completed__c / Total_Steps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of steps that have an outcome not equal to &apos;N/A&apos;</inlineHelpText>
        <label>Test Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test_Execution_Date__c</fullName>
        <description>MICO Sprint 2: This field is created as a part of User Story US-35859. This field will capture the date when the Test was executed.</description>
        <inlineHelpText>Date when the Test execution was last run</inlineHelpText>
        <label>Test Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_Outcome__c</fullName>
        <inlineHelpText>The overall outcome of the test at it&apos;s current stage</inlineHelpText>
        <label>Test Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed with minor issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked from testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <label>Test Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Sprint Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Acceptance Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stability Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Steps__c</fullName>
        <inlineHelpText>The total number of steps in this test</inlineHelpText>
        <label>Total Steps</label>
        <summaryForeignKey>MICO_Test_Steps__c.Test__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>MICO_User_Story__c</referenceTo>
        <relationshipName>MICO_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Execution</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>ProjectNew__c</columns>
        <columns>Project__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Test Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Down_Approved_Record</fullName>
        <active>false</active>
        <description>Lock the test execution record once approved: Created by Preeti Grover on 19/08/2014:MICO</description>
        <errorConditionFormula>AND( ISPICKVAL(Approval_Status__c, &apos;Approved&apos;),
OR ( 

ISCHANGED(Approver__c), 
ISCHANGED(Overall_Test_Comments__c), 
ISCHANGED(ProjectNew__c), 
ISCHANGED(Status__c), 
ISCHANGED(Assigned_To__c), 
ISCHANGED(Sprint__c), 
ISCHANGED(Test_Outcome__c), 
ISCHANGED(Test_Phase__c), 
ISCHANGED(Description__c), 
ISCHANGED(Total_Steps__c),
ISCHANGED(Environment__c),
ISCHANGED(Introduction__c),
ISCHANGED(Template__c),
ISCHANGED(Test_Execution_Date__c),
ISCHANGED(Description__c),
ISCHANGED(User_Story__c)
) 
)</errorConditionFormula>
        <errorMessage>You can not make changes to an Approved Test Execution</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MICO_Approved_Status_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISPICKVAL(Approval_Status__c , &quot;Approved&quot;) &amp;&amp; ISCHANGED( Approver__c),true,false)</errorConditionFormula>
        <errorMessage>You cannot change Approver once the Test Execution is approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MICO_CannotSetYourselfAsApprover</fullName>
        <active>false</active>
        <description>MICO - The logged in user cannot select himself / herself as the Approver on the Test Execution record</description>
        <errorConditionFormula>IF(NOT(ISBLANK(Approver__c))&amp;&amp; NOT(ISBLANK(Submitter__c)) &amp;&amp; Approver__c = Submitter__c,true,false)</errorConditionFormula>
        <errorMessage>The submitter can not be the approver of the Test Execution. Please select a valid user to approve the request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pending_Approval_Status</fullName>
        <active>true</active>
        <description>MICO - This validation rule will prevent the user from editing a Test Execution record if the Test Execution is in an &quot;Approved&quot;/&quot;Pending Approval status</description>
        <errorConditionFormula>AND(
OR (
ISPICKVAL(Approval_Status__c, &apos;Approved&apos;),
ISPICKVAL(Approval_Status__c, &apos;Pending Approval&apos;)
),
OR ( 
ISCHANGED(Approver__c), 
ISCHANGED(Overall_Test_Comments__c), 
ISCHANGED(ProjectNew__c), 
ISCHANGED(Status__c), 
ISCHANGED(Assigned_To__c), 
ISCHANGED(Sprint__c), 
ISCHANGED(Test_Outcome__c), 
ISCHANGED(Test_Phase__c), 
ISCHANGED(Description__c), 
ISCHANGED(Total_Steps__c), 
ISCHANGED(Environment__c), 
ISCHANGED(Introduction__c), 
ISCHANGED(Template__c), 
ISCHANGED(Test_Execution_Date__c), 
ISCHANGED(Description__c), 
ISCHANGED(User_Story__c) 
) 
)</errorConditionFormula>
        <errorMessage>You cannot Edit a Test Execution if the Test Execution is in an &quot;Approved&quot; / &quot;Pending Approval&quot; status</errorMessage>
    </validationRules>
</CustomObject>